@@ -71,6 +71,10 @@ Post-v2.15.0
    - OVS now reports the datapath capability 'ct_zero_snat', which reflects
      whether the SNAT with all-zero IP address is supported.
      See ovs-vswitchd.conf.db(5) for details.
+   - ovs-appctl:
+     * Added ability to add and delete static mac entries using:
+       'ovs-appctl fdb/add <bridge> <port> <vlan> <mac>'
+       'ovs-appctl fdb/del <bridge> <vlan> <mac>'
 
 
 v2.15.0 - 15 Feb 2021
